# rustspice

./: .gitignore  Cargo.toml  README.md
crates/sim-api/: Cargo.toml
crates/sim-api/src/: http.rs  lib.rs  main.rs  schema.rs  session_api.rs
crates/sim-api/tests/: http_tests.rs  schema_tests.rs  session_api_tests.rs
crates/sim-cli/: Cargo.toml
crates/sim-cli/src/: main.rs
crates/sim-cli/tests/: cli_tests.rs  spice_datasets_runner.rs
crates/sim-core/: Cargo.toml  build.rs
crates/sim-core/examples/: bench_parallel.rs
crates/sim-core/src/: amd.rs  analysis.rs  bbd.rs  bbd_solver.rs  btf.rs  circuit.rs  complex_mna.rs  complex_solver.rs  csv_export.rs  engine.rs  json_export.rs  lib.rs  mna.rs  native_klu.rs  netlist.rs  newton.rs  options.rs  psf.rs  raw.rs  result_store.rs  session.rs  solver.rs  sparse_lu.rs  sparse_lu_btf.rs  stamp.rs  topology.rs  va_stamp.rs  waveform.rs
crates/sim-core/tests/: adaptive_timestep_tests.rs  bbd_benchmark_tests.rs  bsim_integration.rs  btf_tests.rs  circuit_tests.rs  dc_basic_end_to_end.rs  dc_smoke.rs  dc_sweep_tests.rs  klu_tests.rs  mna_builder_tests.rs  mna_tests.rs  model_flow_tests.rs  native_klu_tests.rs  netlist_parse.rs  netlist_tests.rs  newton_tests.rs  psf_tests.rs  raw_tests.rs  result_store_tests.rs  session_tests.rs  solver_tests.rs  sparse_lu_tests.rs  spice_datasets_smoke.rs  stamp_tests.rs  topology_tests.rs  tran_waveform_tests.rs
crates/sim-devices/: Cargo.toml
crates/sim-devices/src/: diode.rs  lib.rs  model.rs  mosfet.rs  passive.rs  source.rs
crates/sim-devices/src/bsim/: README.md  channel.rs  evaluate.rs  mobility.rs  mod.rs  params.rs  threshold.rs  types.rs
crates/sim-devices/src/bsim/bsim4/: mod.rs  stress.rs  substrate.rs  tunneling.rs
crates/sim-devices/tests/: diode_tests.rs  model_tests.rs  mosfet_tests.rs  passive_tests.rs  source_tests.rs
crates/sim-va/: Cargo.toml
crates/sim-va/src/: compiler.rs  error.rs  lib.rs  osdi_device.rs  osdi_loader.rs  osdi_types.rs
crates/sim-va/tests/: compiler_tests.rs  device_tests.rs  error_tests.rs  loader_tests.rs
docs/: CHANGELOG.md  ac_analysis.md  adaptive_timestep_plan.md  ai_agent_plan.md  amd_algorithm.md  bbd_solver.md  bsim4_model.md  bsim_model.md  btf_algorithm.md  fft_analysis.md  gui_plan.md  klu_solver.md  myspice_user_manual.md  ngspice_raw_format.md  option_command_plan.md  parallel_factorization.md  rustspice_user_manual.md  solver_klu_plan.md  solver_performance.md  tran_waveform_plan.md  verilog_a_support.md
tests/: run_spice_datasets.py
tests/fixtures/netlists/: basic_dc.cir  began_dynamic_node.sp  began_ibex.sp  began_small_pgrid.sp  dc_sweep.cir  include_child.cir  include_parent.cir  nmos_dc.cir  poly2_test.cir  poly_test.cir  rc_filter.cir
tools/ai-agent/: README.md  pyproject.toml
tools/ai-agent/myspice_agent/: __init__.py  agent.py  cli.py  client.py  config.py  formatters.py  prompts.py
tools/ai-agent/rustspice_agent/: __init__.py  agent.py  cli.py  client.py  config.py  formatters.py  prompts.py  tools.py
tools/ai-agent/tests/: __init__.py  test_client.py
tools/gui/: README.md  pyproject.toml
tools/gui/myspice_gui/: __init__.py  __main__.py  client.py  main_window.py  theme.py
tools/gui/myspice_gui/console/: console.py
tools/gui/myspice_gui/editor/: __init__.py  completer.py  highlighter.py
tools/gui/myspice_gui/simulation/: worker.py
tools/gui/myspice_gui/viewer/: __init__.py  bode.py  signal_list.py  table.py  waveform.py
tools/gui/rustspice_gui/: __init__.py  __main__.py  client.py  main_window.py  theme.py
tools/gui/rustspice_gui/console/: __init__.py
tools/gui/rustspice_gui/editor/: editor.py
tools/gui/rustspice_gui/simulation/: __init__.py  panel.py  worker.py
tools/gui/rustspice_gui/viewer/: bode.py  cursors.py  fft.py  waveform.py
tools/gui/tests/: __init__.py  test_client.py  test_console.py  test_editor.py  test_simulation.py  test_table.py  test_theme.py  test_viewer.py
