[project]
name = "rustspice-gui"
version = "0.1.0"
description = "Graphical user interface for RustSpice circuit simulator"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "RustSpice Team"}
]
keywords = ["spice", "circuit", "simulator", "gui", "eda"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

dependencies = [
    "PySide6>=6.6.0",
    "pyqtgraph>=0.13.0",
    "httpx>=0.27.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.2.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
rustspice-gui = "rustspice_gui.__main__:main"

[project.urls]
Homepage = "https://github.com/rustspice/rustspice"
Documentation = "https://github.com/rustspice/rustspice/docs"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["rustspice_gui*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]
